# kompressor

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  benchmark-methodology.md  benchmarks.md  browser-extension-design.md  ci-integration.md  claude-code-integration.md  comparison-headroom.md  compression-contract.md  context-gateway.md  developer-cli-integration.md  harnesses.md  hermes-codex-patch.md  hermes-install.md  plugins.md  release-checklist.md  reversible-token-compression-paper.md
docs/goals/: implement-all-slices.md
docs/loops/: implement-goal-loop.md  implementation-log.md
docs/plans/: 2026-06-24-claude-context-optimization-engine.md  2026-06-27-kompressor-headroom-context-gateway.md
examples/: optimize_logs.py  proxy_request.py
examples/ci/: github-actions.yml
examples/git-hook/: pre-claude-context
scripts/: gateway_benchmark.py  gateway_proof.py  hermes_raw_baseline.py  lossless_suite_benchmark.py  reversible_strategy_benchmark.py  significant_benchmark.py
src/kompressor/: __init__.py  anthropic_proxy.py  claude_code.py  cli.py  engine.py  estimation.py  hooks.py  legacy.py  mcp_server.py  models.py  (+3 more)
tests/: conftest.py  test_advanced_codecs.py  test_anthropic_proxy.py  test_benchmark_claims.py  test_binary_codec.py  test_claude_code.py  test_cli.py  test_engine.py  test_estimation.py  test_foundation.py  test_gateway.py  test_gateway_scripts.py  test_harnesses.py  test_hermes_install.py  test_hermes_patch.py  test_hooks.py  test_json_path_codec.py  test_json_table_codec.py  test_legacy_api.py  test_lossless_ext_codecs.py  test_mcp_server.py  test_models.py  test_pattern_hash_codec.py  test_plugins.py  test_prompts.py  test_proxy.py  test_reversible_research_codecs.py  test_security.py  test_xml_path_codec.py
(+46 files in other folders)
