[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "kompressor"
version = "0.2.0"
description = "Client-side LLM context optimization toolkit with harness plugins."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Chris Coates" }
]
keywords = ["llm", "claude", "anthropic", "openai", "gemini", "hermes", "codex", "tokens", "compression", "context"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "hypothesis>=6.100",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
anthropic = [
  "anthropic>=0.34",
]

[project.scripts]
kompressor = "kompressor.cli:app"

[project.urls]
Homepage = "https://github.com/CJCShadowsan/kompressor"
Repository = "https://github.com/CJCShadowsan/kompressor"

[tool.hatch.build.targets.wheel]
packages = ["src/kompressor"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
  "src/kompressor/hermes_install/plugin_template/*",
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
